login and registeration page added

--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
             <div class="float-btn">
@@ -65,69 +65,62 @@
     </div><!-- / STAR ANIMATION -->
   </div>
 
-  <div class="other-banners">
-    <div class="container">
-      <div class="row">
-          <div class="col-md-6">
-              <div class="banner-area">
-              <h1 class="text-white">Contact Us</h1>
-              <h5 class="bread text-white"><i class="fas fa-home"></i> Home - <span>Contact Us</span></h5>
-            </div>
-          </div>
-      </div>
-    </div>
-  </div>
+  <section class="testimonial-area">
+      <br><br><br><br><br>
+      <div class="container">
+          <div class="row">
+              <div class="col-md-6 mx-auto">
+                  <div class="panel-area">
+                      <div class="panel-welcome">
+                          <h2 class="text-center"><span class="one">Welcome To</span> <br> <span class="two">CoinTXB</span></h2>
+                      </div>
+                      <div class="panel-body">
+                        <div align="center">
+                         <span class="panel-text">Login To Your Account</span><br>
+                         <img src="img/regborder.png" alt="regborder">
+                        </div>
 
-  <section class="certificate-area contact">
-      <br><br><br>
-    <div class="container pt-120" align="center">
-        <div class="row justify-content-center">
-          <div class="col-lg-10">
-            <div class="row mb-none-30">
-                            <div class="col-md-4 col-sm-6 mb-30">
-                <div class="contact-item">
-                  <i class="fas fa-envelope-open"></i>                  <h5 class="mt-2">Email Contact</h5>
-                  <div class="mt-4">
-                    <p><a href="mailto:support@CoinTXB.com"><span class="__cf_email__" data-cfemail="bdd9d8d0d2fdd8c5dcd0cdd1d893ded2d0">Click to send us an email support@CoinTXB.com</span></a></p>
-                  </div>
-                </div><!-- contact-item end -->
-              </div>
-                            <div class="col-md-4 col-sm-6 mb-30 first">
-                <div class="contact-item">
-                  <i class="fas fa-map-marker"></i>                  <h5 class="mt-2">Office Address</h5>
-                  <div class="mt-4">
-                    <p><a href="https://find-and-update.company-information.service.gov.uk/company/11996379" target="_blank"> 18th Fl, Suite 185, 200 SW Market St Portland,Oregon.</a></p>
-                  </div>
-                </div><!-- contact-item end -->
-              </div>
-               <div class="col-md-4 col-sm-6 mb-30 first">
-                <div class="contact-item">
-                  <i class="fas fa-envelope-open"></i>                  <h5 class="mt-2">Live Chat</h5>
-                  <div class="mt-4">
-                    <p><a href="javascript:void(0)"><span class="__cf_email__" data-cfemail="bdd9d8d0d2fdd8c5dcd0cdd1d893ded2d0">Click on the live chat button to engage our customer support 24/7</span></a></p>
-                  </div>
-                </div><!-- contact-item end -->
-              </div>
+                        <form action="#" method="post">
 
+                           <div class="form-group">
+                            <label for="email" class="form-label">
+                              <img src="img/rmail.png" alt="rmail"> <br>
+                              <span class="panel-label"><b>Email Address</b></span>
+                            </label>
+                            <input type="email" name="email" id="email" class="form-control form-control-lg panel-control" placeholder="Email Address">
                           </div>
 
-                          <br>
-                  <div class="row mb-none-30">
+                         <br>
+                         <div class="form-group">
+                          <label for="password" class="form-label">
+                            <img src="img/rpass.png" alt="password"> <br>
+                            <span class="panel-label"><b>Password</b></span>
+                          </label>
+                          <input type="password" name="password" id="password" class="form-control form-control-lg panel-control" placeholder="Password">
+                        </div>
 
-              <div class="col-md-4 col-sm-6 mb-30 mx-auto">
-                <div class="contact-item">
-                  <i class="fas fa-phone"></i>                  <h5 class="mt-2">Call or Message</h5>
-                  <div class="mt-4">
-                    <p><a href="tel:+15412247439"><span class="__cf_email__" data-cfemail="bdd9d8d0d2fdd8c5dcd0cdd1d893ded2d0">+154-122-47439</span></a></p>
+
+                  <br>
+
+<a class="base--color" style="text-decoration: none;" href="#un">Forgotten Password ?</a>
+                  
+                  <br><br>
+                  <div class="d-grid">
+                    <button type="submit" class="btn btn-submit text-white">Login Now</button>
+                  </div>  
+                      
+                  <p style="margin-top: 10px;">
+                    <span class="panel-foot">Back to Home <a href="index.html" class="panel-footer"><i class="fas fa-home"></i> Home</a></span>
+                    <span class="panel-foot second">Need To Register? <a href="login.html" class="panel-footer"><i class="fas fa-user-plus"></i> Open Account</a></span>
+                    </p>
+                        </form>
+                      </div>
                   </div>
-                </div><!-- contact-item end -->
               </div>
-                  </div>
           </div>
-        </div>
       </div>
+      <br><br>
   </section>
-
 
   <footer class="crypto-footer">
     <div class="row text-white">
@@ -144,12 +137,11 @@
       </div>
     </div>
   </footer>
-
+  
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-rocket"></i></button>
-
-  <script src="bootstrap/js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
-
+  
+      <script src="bootstrap/js/bootstrap.min.js"></script>
+  
+      <script src="js/script.js"></script>
   </body>
-
   </html>
