--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
               </li>
             </ul>
             <div class="float-btn">
-              <a href="#un" class="btn btn-login">Login</a>
+              <a href="login.html" class="btn btn-login">Login</a>
               <a href="register.html" class="btn btn-register">Sign Up</a>
             </div>
             <div class="d-flex">
