added few links

--- a/dashboard/history.html
+++ b/dashboard/history.html
@@ -147,7 +147,7 @@
             <a href="history.html"><i class="icon-history2"></i><span data-i18n="nav.dash.main" class="menu-title">Transaction History</span></a>
           </li>
           <li class="nav-item">
-            <a href="#"><i class="icon-money2"></i><span data-i18n="nav.dash.main" class="menu-title">Request Withdrawal</span></a>
+            <a href="withdrawal.html"><i class="icon-money2"></i><span data-i18n="nav.dash.main" class="menu-title">Request Withdrawal</span></a>
           </li>
           <li class="nav-item">
             <a href="#"><i class="icon-users2"></i><span data-i18n="nav.dash.main" class="menu-title">My Referrals</span></a>
