--- a/dashboard/deposit.html
+++ b/dashboard/deposit.html
@@ -145,10 +145,10 @@
             <a href="deposit.html"><i class="icon-money3"></i><span data-i18n="nav.dash.main" class="menu-title">Make Deposit</span></a>
           </li>
           <li class="nav-item">
-            <a href="#"><i class="icon-history2"></i><span data-i18n="nav.dash.main" class="menu-title">Transaction History</span></a>
+            <a href="history.html"><i class="icon-history2"></i><span data-i18n="nav.dash.main" class="menu-title">Transaction History</span></a>
           </li>
           <li class="nav-item">
-            <a href="#"><i class="icon-money2"></i><span data-i18n="nav.dash.main" class="menu-title">Request Withdrawal</span></a>
+            <a href="withdrawal.html"><i class="icon-money2"></i><span data-i18n="nav.dash.main" class="menu-title">Request Withdrawal</span></a>
           </li>
           <li class="nav-item">
             <a href="#"><i class="icon-users2"></i><span data-i18n="nav.dash.main" class="menu-title">My Referrals</span></a>
