added referral page

--- a/dashboard/deposit.html
+++ b/dashboard/deposit.html
@@ -151,13 +151,13 @@
             <a href="withdrawal.html"><i class="icon-money2"></i><span data-i18n="nav.dash.main" class="menu-title">Request Withdrawal</span></a>
           </li>
           <li class="nav-item">
-            <a href="#"><i class="icon-users2"></i><span data-i18n="nav.dash.main" class="menu-title">My Referrals</span></a>
+            <a href="referral.html"><i class="icon-users2"></i><span data-i18n="nav.dash.main" class="menu-title">My Referrals</span></a>
           </li>
           <li class="nav-item">
-            <a href="#"><i class="icon-user"></i><span data-i18n="nav.dash.main" class="menu-title">Account Profile</span></a>
+            <a href="profile.html"><i class="icon-user"></i><span data-i18n="nav.dash.main" class="menu-title">Account Profile</span></a>
           </li>
           <li class="nav-item">
-            <a href="#"><i class="icon-commenting-o"></i><span data-i18n="nav.dash.main" class="menu-title">Contact Support</span></a>
+            <a href="mailto:support@cointxb.com"><i class="icon-commenting-o"></i><span data-i18n="nav.dash.main" class="menu-title">Contact Support</span></a>
           </li>
           <li class="nav-item">
             <a href="#"><i class="icon-power3"></i><span data-i18n="nav.dash.main" class="menu-title">Logout</span></a>
