--- a/dashboard/profile.html
+++ b/dashboard/profile.html
@@ -459,6 +459,42 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="new_password" class="form-label"><strong>New Password</strong></label>
+                                        <input type="password" name="new_password" id="new_password" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="password_confirmation" class="form-label"><strong>Retype Password</strong></label>
+                                        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="bitcoin_address" class="form-label"><strong>Your Bitcoin Address</strong></label>
+                                        <input type="text" name="bitcoin_address" id="bitcoin_address" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="email" class="form-label"><strong>Your E-mail Address</strong></label>
+                                        <input type="email" name="email" id="email" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="form-group">
+                                <label for="current_password" class="form-label"><strong>Current Password</strong></label>
+                                <input type="text" name="current_password" id="current_password" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-proceed text-white">Update</button>
+                            </div>
                         </form>
                     </div>
                 </div>
