--- a/dashboard/referral.html
+++ b/dashboard/referral.html
@@ -210,10 +210,10 @@
                             </div>
                             <div class="col-sm-9">
                                 <div class="row">
-                                    <div class="col-sm-9">
+                                    <div class="col-sm-9 form-group">
                                     <input type="text" class="form-control" id="myInput" value="https://www.cointxb.com/register?ref=6e4db4ac-a6cd-11ea-b57f-88d7f6977c56" aria-label="Recipient's username" aria-describedby="basic-addon2" readonly>
                                 </div>
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-3 form-group">
                                       <button class="btn btn-outline-secondary" type="button" onclick="copied()">Copy</button>
                                     </div>
                                 </div>
