--- a/dashboard/withdrawal.html
+++ b/dashboard/withdrawal.html
@@ -245,22 +245,27 @@
                         <form action="" method="post">
                             <div class="row">
                                 <div class="col-md-4">
+                                    <div class="form-group">
                                     <label for="currency" class="form-label"><strong>Currency </strong></label>
                                     <select name="currency" id="currency" class="form-control form-select" required>
                                         <option value="" selected disabled>-- Select Currency --</option>
                                         <option value="btc">Bitcoin</option>
                                     </select>
                                 </div>
+                                </div>
                                 <div class="col-md-4">
+                                    <div class="form-group">
                                     <label for="amount" class="form-label"><strong>Amount </strong></label>
                                     <input type="text" name="amount" id="amount" class="form-control" placeholder="Enter Amount">
                                 </div>
+                                </div>
                                 <div class="col-md-4">
+                                    <div class="form-group">
                                     <label for="address" class="form-label"><strong>Wallet Address </strong></label>
                                     <input type="text" name="amount" id="amount" class="form-control" placeholder="Enter Bitcoin Wallet Address">   
                                 </div>
+                                </div>
                             </div>
-                            <br>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-proceed text-white">Request</button>
                             </div>
